Fix overflowing properly (again).

--- a/style.scss
+++ b/style.scss
@@ -220,7 +220,7 @@ h1, h2, #menu, .post_date, .comment-meta {
   margin: 0 auto;
   min-width: $text-min-width;
   max-width: $text-max-width;
-  overflow: auto;
+  word-wrap: break-word;
   @include hyphens-auto;
 
   @media only screen and (max-device-width: 480px) {
@@ -422,7 +422,7 @@ blockquote {
   margin: 1em 0;
   background-color: $text-background-colour;
   color: $page-text-dark-colour;
-  overflow: auto;
+  word-wrap: break-word;
 
   @media only screen and (max-device-width: 480px) {
     padding: 0.5em;
